--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -4,7 +4,7 @@ on:
   # Try enabling auto-merge for all open pull requests on branches starting with 'webui/' prefix
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches: ["*"]
 
@@ -14,7 +14,7 @@ on:
   pull_request_target:
     types:
       - opened
-      - synchronized
+      - synchronize
       - reopened
       - edited
       - labeled
