--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,15 +12,15 @@ on:
   # Try enabling auto-merge for a pull request when a draft is marked as “ready for review”, when
   # a required label is applied or when a “do not merge” label is removed, or when a pull request
   # is updated in any way (opened, synchronized, reopened, edited).
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - edited
-      - labeled
-      - unlabeled
-      - ready_for_review
+#  pull_request_target:
+#    types:
+#      - opened
+#      - synchronize
+#      - reopened
+#      - edited
+#      - labeled
+#      - unlabeled
+#      - ready_for_review
 
 jobs:
   automerge:
@@ -32,4 +32,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-method: merge
           do-not-merge-labels: no-merge
-          pull-request: ${{ github.event.inputs.pull-request }}
