--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -2,6 +2,9 @@ name: automerge
 
 on:
   # Try enabling auto-merge for all open pull requests on branches starting with 'webui/' prefix
+  push:
+    branches:
+      - '**'
   pull_request:
     branches:
       - '**'
