--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -6,8 +6,7 @@ on:
     branches:
       - '**'
   pull_request:
-    branches:
-      - '**'
+    types: [ opened, reopened ]
 
   # Try enabling auto-merge for a pull request when a draft is marked as “ready for review”, when
   # a required label is applied or when a “do not merge” label is removed, or when a pull request
