--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -29,8 +29,13 @@ jobs:
 #        uses: "pascalgn/automerge-action@v0.15.3"
 #        env:
 #          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#    steps:
+#      - uses: reitermarkus/automerge@v2.1.2
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          merge-method: merge
     steps:
-      - uses: reitermarkus/automerge@v2.1.2
+      - uses: AWOrganisation/automerge@v1.0.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-method: merge
