--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -35,7 +35,7 @@ jobs:
 #          token: ${{ secrets.GITHUB_TOKEN }}
 #          merge-method: merge
     steps:
-      - uses: AWOrganisation/automerge
+      - uses: AWOrganisation/automerge-aw-test@v1.0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-method: merge
