--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -32,6 +32,9 @@ jobs:
 #        env:
 #          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     steps:
+      - name: Sleep for 10 seconds
+        run: sleep 10s
+        shell: bash
       - uses: reitermarkus/automerge@v2.1.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
